# polymny

./: .gitignore  .travis.yml  LICENSE  Lang.elm  Makefile  README.md  TODO.md
.github/workflows/: build.yml
client/: .gitignore  README.md  elm-application.json  elm.json  ports.js
client/src/: .gitignore  About.elm  Api.elm  Capsule.elm  Colors.elm  Config.elm  Device.elm  Dropdown.elm  Lang.elm  Log.elm  Main.elm  Popup.elm  RemoteData.elm  Route.elm  Routes.elm  Setup.elm  Status.elm  TimeUtils.elm  Triplet.elm  Ui.elm  Unlogged.elm  User.elm  Utils.elm  Webcam.elm
client/src/About/: Views.elm
client/src/Acquisition/: Ports.elm  Subscriptions.elm  Types.elm  Updates.elm  Views.elm
client/src/Admin/: Types.elm  Updates.elm  Views.elm
client/src/Api/: Capsule.elm  User.elm  Utils.elm
client/src/App/: Types.elm  Updates.elm  Utils.elm  Views.elm
client/src/Capsule/: Types.elm  Updates.elm  Views.elm
client/src/CapsuleSettings/: Updates.elm  Views.elm
client/src/Collaboration/: Types.elm  Updates.elm  Views.elm
client/src/Core/: HomeView.elm  Ports.elm  Subscriptions.elm  Types.elm  Updates.elm  Utils.elm  Views.elm
client/src/Data/: Capsule.elm  Types.elm  User.elm
client/src/Edition/: Ports.elm  Types.elm  Updates.elm  Views.elm
client/src/ForgotPassword/: Types.elm  Updates.elm  Views.elm
client/src/Home/: Types.elm  Updates.elm  Views.elm
client/src/LoggedIn/: Ports.elm  Types.elm  Updates.elm  Views.elm
client/src/Login/: Types.elm  Updates.elm  Views.elm
client/src/NewCapsule/: Types.elm  Updates.elm  Views.elm
client/src/NewProject/: Types.elm  Updates.elm  Views.elm
client/src/Notification/: Types.elm  Views.elm
client/strings/: EnUs.po  FrFr.po  strings.pot
old-client/: elm.json
old-client/src/: Api.elm  Capsule.elm  Lang.elm  Log.elm.debug  Log.elm.release  OldMain.elm  Route.elm  Unlogged.elm
samples/: slideTest.odp
scripts/: audio-norm.py  extraire.sh  incruster.py  pdf2png.py  psh  reconstruire.sh  record-extra.py  requirements.txt  traiter.sh
server/: .gitignore  Cargo.toml  diesel.toml  rust-toolchain
server/assets/templates/: email_address_validation.html  email_address_validation.txt  index.tera  setup.html
server/migrations/0/: Capsule.json  Notification.json  Plan.json  Privacy.json  Role.json  Session.json  TaskStatus.json  User.json  down.sql  up.sql
server/migrations/2019-12-26-163335_auth_user/: down.sql  up.sql
server/migrations/2020-01-17-165334_create_projects_table/: down.sql  up.sql
server/migrations/2020-01-21-153317_create_capsule_tables/: down.sql  up.sql
server/migrations/2020-07-10-140647_edition_options/: down.sql  up.sql
server/migrations/2020-07-17-211747_ADD_EXTRA_FIELD_TO_SLIDE/: down.sql  up.sql
server/migrations/2020-09-15-081302_validate_capsule/: clear_project_uuid.py  down.sql  post_script.sh  up.sql
server/migrations/2020-10-21-122459_notifications/: down.sql  up.sql
server/migrations/2020-11-04-132209_edited/: down.sql  up.sql
server/migrations/2020-11-19-140258_ADD_UPLOADED_FIELD/: down.sql  up.sql
server/migrations/2020-12-24-094408_UPDATE_NOTIF_TYPE/: up.sql
server/migrations/2020-12-27-173532_TASKS/: down.sql  up.sql
server/src/: command.rs  config.rs  generated_schema.rs  harsh.rs  lib.rs  log_fairing.rs  mailer.rs  main.rs  populate_db.rs  reset_db.rs  schema.rs  templates.rs  update_video_duration.rs  user_disk_usage.rs  webcam.rs  websockets.rs
server/src/db/: asset.rs  capsule.rs  gos.rs  mod.rs  notification.rs  project.rs  session.rs  slide.rs  task.rs  task_status.rs  user.rs
server/src/routes/: admin.rs  asset.rs  auth.rs  capsule.rs  gos.rs  loggedin.rs  mod.rs  notification.rs  project.rs  setup.rs  slide.rs  task.rs  user.rs  watch.rs
server/src/sh/: transcode_media.sh
tests/: .gitignore  README.md  pip.sh  pipList.txt  requirements.txt  samples.yml
tests/tests/: test_home.py  test_unlogged.py
wiki/: Home.md  Présentation-de-polymny-(WIP).md  Websockets.md  a-supp
wiki/resources/: a-supp  bigPicture.json  publier.xcf
(+65 files in other folders)
