[package]
name = "server"
version = "0.4.0"
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["git"]
git = ["compile-time-run"]

[dependencies]
rocket = "0.4.4"
mime = "0.3.12"
diesel = { version = "1.4.3", features = ["chrono", "uuid", "serde_json"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
rand = "0.7.2"
bcrypt = "0.6.1"
lettre = "0.9.2"
lettre_email = "0.9.2"
chrono = "0.4"
serde = { version = "1.0.44", features = ["derive"] }
serde_yaml = "0.8"
rocket-multipart-form-data = "0.7.2"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
tempfile = "3.1.0"
log = "0.4.8"
serde_json = "1.0"
simplelog = { git = "https://github.com/polymny/simplelog.rs" }
compile-time-run = { version = "0.2.8", optional = true }
image = "0.23.9"
ffmpeg-next = "4.3.6"
rayon = "1.4.1"
tungstenite = "0.11.1"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["serve", "diesel_postgres_pool", "json"]

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "populate-db"
path = "src/populate_db.rs"
