[package]
name = "polymny"
version = "1.1.2"
authors = ["Thomas Forgione <thomas@polymny.studio>", "Nicolas Bertrand <nicolas@polymny.studio>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["git"]
git = ["compile-time-run"]

[dependencies]
bcrypt = "0.14.0"
ergol = { version = "0.1.2", features = ["with-serde_json-1", "with-chrono-0_4", "with-rocket" ] }
ergol_cli = "0.1.2"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets" ] }
lettre = "0.10.4"
tokio = { version = "1.6.1", features = ["fs"] }
futures = "0.3.12"
harsh = "0.2.2"
rayon = "1.7.0"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
compile-time-run = { version = "0.2.12", optional = true }
chrono = "0.4.24"
time = "0.3.20"
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
futures-sink = "0.3.28"
lazy_static = "1.4"
simplelog = { git = "https://github.com/polymny/simplelog.rs" }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "reset-db"
path = "src/reset_db.rs"

[[bin]]
name = "harsh"
path = "src/harsh.rs"

[[bin]]
name = "user-disk_usage"
path = "src/user_disk_usage.rs"

[[bin]]
name = "update-video-duration"
path = "src/update_video_duration.rs"


